--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Day 9/__pycache__/logo.cpython-311.pyc
 Day 9 - Secret Auction/list.py
 Day 9 - Secret Auction/__pycache__/logo.cpython-311.pyc
 coding project.py
+Day 11 - Blackjack/blackjack
+Day 11 - Blackjack/cards.py
+Day 11 - Blackjack/.vscode/settings.json
